# AI-Powered-Emergency-Triage-Assistant

./: LICENSE  README.md  TESTING.md  docker-compose.gpu.yml
client/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
client/src/: App.vue  main.js
client/src/components/: BrowserNativeSpeechRecognition.vue  ChatBubble.vue  ChatConversation.vue  HelloWorld.vue  HighlightTextarea.vue  NextQuestionSuggestion.vue  SeverityLevelBadge.vue  SuggestionAuditLog.vue  TriageSummary.vue  VoskAudioTranscriber.vue
client/src/plugins/: vuetify.js
client/src/router/: index.js
client/src/views/: DashboardView.vue  HomeView.vue  NativeView.vue  VoskView.vue
server/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  Procfile  README.md  alembic.ini  main.py  modal_ollama_service.py  pyproject.toml  requirements.txt  test_cloud_integration.py
server/alembic/versions/: 5fe63b5a1f74_initial_migration_for_session_and_.py
server/config/: red_flags.yaml
server/data/: esi_protocol_samples.md
server/models/llama/: conversation_analizer.py
server/models/transcription/: transcription.py  vosk_transcriber.py  whisper_transcriber.py
server/playground/: whisper_debug.py
server/src/: config.py  logger.py  main.py
server/src/agents/: __init__.py  base.py
server/src/agents/implementations/: __init__.py  handbook_rag_ollama_agent.py  handbook_rag_openai_agent.py  hybrid_agent.py  llm_agent.py  multi_step_agent.py  random_agent.py  rule_based_agent.py  schema_first_ollama_agent.py
server/src/app/: database.py  main.py  models.py  routes.py  schemas.py
server/src/models/: __init__.py  esi_assessment.py
server/src/models/diarization/: __init__.py  diarizer.py
server/src/models/llama/: __init__.py  conversation_analizer.py
server/src/models/transcription/: __init__.py  transcriber.py  vosk_transcriber.py  whisper_transcriber.py
server/src/playground/: whisper_debug.py
server/src/services/: __init__.py  modal_ollama_service.py  ollama_client.py  ollama_embeddings.py  openai_client.py  rag.py  rag_ollama.py  red_flags.py
server/src/utilities/: __init__.py  ingest_protocols.py  ingest_protocols_dual.py
server/testing/: __init__.py  runner.py
server/testing/dashboard/: __init__.py  app.py  launch.py
server/testing/models/: __init__.py  test_diarizer.py  test_models.py
server/testing/models/sample_interviews/: clinic_dialogue_carlos.txt  clinic_dialogue_jessica.txt  clinic_dialogue_peter.txt  clinic_dialogue_tom.txt  er_chestpain_reynolds.txt
server/testing/utils/: __init__.py  data_loader.py  metrics.py  visualization.py
tests/data/: esi_test_cases.json
