[project]
name = "server"
version = "0.1.0"
description = "AI-Powered Emergency Triage Assistant"
authors = [
    {name = "Daniel Alonge"}
]
readme = "README.md"
requires-python = "=3.13.5"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "gradio (>=5.46.1,<6.0.0)",
    "numpy (>=1.21.0,<2.0.0)",
    "ollama (>=0.5.4,<0.6.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchaudio (>=2.8.0,<3.0.0)",
    "transformers (>=4.56.2,<5.0.0)",
    "vosk (==0.3.44)",
    "pydantic (>=2.11.9,<3.0.0)"
]

[tool.poetry.scripts]
main = "main:main"
demo = "playground.whisper_debug:launch"

[tool.poetry]
packages = [
    {include = "app", from = "src"}, 
    {include = "models", from = "src"},
    {include = "playground", from = "src"},
    {include = "services", from = "src"}
    ]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
