[project]
name = "server"
version = "0.1.0"
description = "AI-Powered Emergency Triage Assistant"
authors = [
    {name = "Daniel Alonge"}
]
readme = "README.md"
requires-python = "<3.14,>3.10"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "gradio (>=5.46.1,<6.0.0)",
    "numpy (>=1.21.0,<2.0.0)",
    "ollama (>=0.5.4,<0.6.0)",
    "modal (>=1.1.4)",
    "httpx (>=0.25.0,<1.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchaudio (>=2.8.0,<3.0.0)",
    "transformers (>=4.56.2,<5.0.0)",
    "vosk (==0.3.44)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-asyncio (>=0.24.0,<1.0.0)",
    "scikit-learn (>=1.3.0,<2.0.0)",
    "matplotlib (>=3.7.0,<4.0.0)",
    "seaborn (>=0.12.0,<1.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "plotly (>=5.15.0,<6.0.0)",
    "streamlit (>=1.28.0,<2.0.0)",
    "langchain (>=0.2.0,<1.0.0)",
    "langchain-community (>=0.2.0,<1.0.0)",
    "chromadb (>=0.5.0,<1.0.0)",
    "openai (>=1.35.0,<2.0.0)",
    "langchain-openai (>=0.1.0,<1.0.0)",
    "langchain-ollama (>=0.1.0,<1.0.0)",
    "pyyaml (>=6.0.0,<7.0.0)",
    "structlog (>=23.0.0,<25.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "pypdf (>=3.0.0,<5.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)"
]

[tool.poetry.scripts]
main = "main:main"
demo = "playground.whisper_debug:launch"
dashboard = "testing.dashboard.launch:main"
ingest = "utilities.ingest_protocols:main"
ingest-dual = "utilities.ingest_protocols_dual:main"

[tool.poetry]
packages = [
    {include = "app", from = "src"},
    {include = "models", from = "src"},
    {include = "playground", from = "src"},
    {include = "services", from = "src"},
    {include = "agents", from = "src"},
    {include = "utilities", from = "src"}
    ]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
